--- a/Public/style.css
+++ b/Public/style.css
@@ -3,7 +3,7 @@ body {
 background-color: white;
 }
 
-.error {color: FF0000;}
+.error {color: #FF0000;}
 
 /* Tällä muokataan otsikon näköisyyttä */
 h1 {
